<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <ListPreference
            android:key="startscreen"
            android:title="@string/startscreen"
            android:entries="@array/startscreens"
            android:entryValues="@array/startscreens_values"
            android:defaultValue="0"/>

        <CheckBoxPreference
            android:key="sound"
            android:title="@string/sound"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="vibration"
            android:title="@string/vibration"
            android:defaultValue="true"/>

        <com.faltenreich.diaguard.preferences.CategoryPreference
            android:key="categories"
            android:title="@string/categories_active"
            android:entries="@array/categories"
            android:entryValues="@array/categories"/>

        <ListPreference
            android:key="dateformat"
            android:title="@string/dateformat"
            android:entries="@array/dateformat"
            android:entryValues="@array/dateformat"
            android:defaultValue="@string/dateformat_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/data">

        <com.faltenreich.diaguard.preferences.CleanUpPreference
            android:key="cleanup"
            android:title="@string/cleanup"/>

        <com.faltenreich.diaguard.preferences.BackupPreference
            android:key="backup"
            android:title="@string/backup"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/units">

        <ListPreference
            android:key="unit_bloodsugar"
            android:title="@string/bloodsugar"
            android:entries="@array/bloodsugar_units"
            android:entryValues="@array/bloodsugar_units_values"
            android:defaultValue="1"/>

        <ListPreference
            android:key="unit_meal"
            android:title="@string/meal"
            android:entries="@array/meal_units"
            android:entryValues="@array/meal_units_values"
            android:defaultValue="0.1"/>

        <ListPreference
            android:key="unit_hba1c"
            android:title="@string/hba1c"
            android:entries="@array/hba1c_units"
            android:entryValues="@array/hba1c_units_values"
            android:defaultValue="1"/>

        <ListPreference
            android:key="unit_weight"
            android:title="@string/weight"
            android:entries="@array/weight_units"
            android:entryValues="@array/weight_units_values"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_therapy_targets">

        <com.faltenreich.diaguard.preferences.BloodSugarPreference
            android:key="target"
            android:title="@string/pref_therapy_targets_target"
            android:dialogTitle="@string/pref_therapy_targets_target"
            android:defaultValue="120"
            android:inputType="number"/>

        <com.faltenreich.diaguard.preferences.BloodSugarPreference
            android:key="correction_value"
            android:title="@string/correction"
            android:dialogTitle="@string/correction"
            android:defaultValue="40"
            android:inputType="number"/>

        <com.faltenreich.diaguard.preferences.FactorPreference
            android:key="factors"
            android:title="@string/factors"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_therapy_limits">

        <CheckBoxPreference
            android:key="targets_highlight"
            android:title="@string/pref_therapy_targets_highlight"
            android:defaultValue="true"/>

        <com.faltenreich.diaguard.preferences.BloodSugarPreference
            android:key="hyperclycemia"
            android:title="@string/pref_therapy_targets_hyperclycemia"
            android:dialogTitle="@string/pref_therapy_targets_hyperclycemia"
            android:defaultValue="180"
            android:inputType="number"/>

        <com.faltenreich.diaguard.preferences.BloodSugarPreference
            android:key="hypoclycemia"
            android:title="@string/pref_therapy_targets_hypoclycemia"
            android:dialogTitle="@string/pref_therapy_targets_hypoclycemia"
            android:defaultValue="60"
            android:inputType="number"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:title="@string/homepage"
            android:summary="@string/app_homepage_short">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_homepage"/>
        </Preference>

        <Preference
            android:title="@string/facebook"
            android:summary="@string/app_facebook_url_short">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_facebook_url"/>
        </Preference>

        <Preference
            android:title="@string/contact"
            android:summary="@string/app_mail_short">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_mail"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/development">

        <com.faltenreich.diaguard.preferences.LicensePreference
            android:title="@string/licenses"/>

        <Preference
            android:title="@string/version"
            android:summary="@string/app_version"/>

    </PreferenceCategory>

</PreferenceScreen>