<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_day"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_log"
            android:title="@string/log" />
    </group>

    <group
        android:id="@+id/activities">
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_food_database"
            android:title="@string/food_database" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_export"
            android:title="@string/export" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>

</menu>