<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <com.faltenreich.diaguard.preferences.CategoryPreference
            android:key="categories"
            android:title="@string/categories_active"
            android:entries="@array/categories"
            android:entryValues="@array/categories"/>

        <ListPreference
            android:key="dateformat"
            android:title="@string/dateformat"
            android:entries="@array/dateformat"
            android:entryValues="@array/dateformat"
            android:defaultValue="@string/dateformat_default"/>

        <ListPreference
            android:key="start_fragment"
            android:title="@string/startscreen"
            android:entries="@array/startscreens"
            android:entryValues="@array/startscreens_values"
            android:defaultValue="0"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/data">

        <com.faltenreich.diaguard.preferences.CleanUpPreference
            android:key="cleanup"
            android:title="@string/cleanup"/>

        <com.faltenreich.diaguard.preferences.BackupPreference
            android:key="backup"
            android:title="@string/backup"/>

    </PreferenceCategory>

</PreferenceScreen>