<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diaguard="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_date"
        android:title="@string/date_select"
        diaguard:showAsAction="always"/>

    <item android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:title="@string/day_previous"
        diaguard:showAsAction="always"/>

    <item android:id="@+id/action_forward"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/day_next"
        diaguard:showAsAction="always"/>

    <item android:id="@+id/action_newevent"
        android:icon="@drawable/ic_action_new"
        android:title="@string/entry_new"
        diaguard:showAsAction="always"/>

</menu>