<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/MeasurementInput"
            android:id="@+id/edittext_bolus"
            android:hint="@string/bolus" />

        <TextView
            style="@style/MeasurementLabel"
            android:id="@+id/insulin_bolus_label"
            android:text="@string/bolus" />

    </LinearLayout>

    <View style="@style/LayoutRowSeparator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/MeasurementInput"
            android:id="@+id/calculator_correction"
            android:hint="@string/correction" />

        <TextView
            style="@style/MeasurementLabel"
            android:id="@+id/insulin_correction_label"
            android:text="@string/correction" />

    </LinearLayout>

    <View style="@style/LayoutRowSeparator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/MeasurementInput"
            android:id="@+id/edittext_basal"
            android:hint="@string/basal" />

        <TextView
            style="@style/MeasurementLabel"
            android:id="@+id/insulin_basal_label"
            android:text="@string/basal" />

    </LinearLayout>

</LinearLayout>