<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Padding">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_data_export_message"
                android:layout_marginBottom="@dimen/margin_between"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between">

                <TableRow style="@style/TableRow">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/datestart"
                        style="@style/Label"/>

                    <Button android:id="@+id/button_datestart"
                        android:layout_weight="2"
                        android:onClick="onClickShowStartDatePicker"
                        style="@style/SpinnerButtonStyle"/>

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/dateend"
                        style="@style/Label"/>

                    <Button android:id="@+id/button_dateend"
                        android:layout_weight="2"
                        android:onClick="onClickShowEndDatePicker"
                        style="@style/SpinnerButtonStyle"/>

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/format"
                        style="@style/Label"/>

                    <Spinner android:id="@+id/spinner_format"
                        android:layout_weight="2"
                        android:entries="@array/formats"/>

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/mail"
                        style="@style/Label"/>

                    <CheckBox android:id="@+id/checkbox_mail"
                        android:layout_weight="2"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>