<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout style="@style/LayoutRow">

            <com.faltenreich.diaguard.ui.view.TintImageView
                style="@style/LayoutRowImage"
                android:src="@drawable/ic_action_done"
                app:tintColor="@color/gray_darker" />

            <TextView style="@style/LayoutRowLabel"
                android:text="@string/pref_therapy_targets_target"/>

            <EditText style="@style/LayoutRowTextLarge"
                android:id="@+id/calculator_target"/>

        </LinearLayout>

        <View style="@style/LayoutRowSeparator"/>

        <LinearLayout style="@style/LayoutRow">

            <com.faltenreich.diaguard.ui.view.TintImageView
                style="@style/LayoutRowImage"
                android:src="@drawable/ic_done_all"
                app:tintColor="@color/gray_darker" />

            <TextView style="@style/LayoutRowLabel"
                android:text="@string/correction_value"/>

            <EditText style="@style/LayoutRowTextLarge"
                android:id="@+id/calculator_correction"/>

        </LinearLayout>

        <View style="@style/LayoutRowSeparator"/>

        <LinearLayout style="@style/LayoutRow">

            <com.faltenreich.diaguard.ui.view.TintImageView
                style="@style/LayoutRowImage"
                android:src="@drawable/ic_category_bloodsugar"
                app:tintColor="@color/gray_darker" />

            <TextView style="@style/LayoutRowLabel"
                android:text="@string/bloodsugar"/>

            <EditText style="@style/LayoutRowTextLarge"
                android:id="@+id/calculator_bloodsugar">
                <requestFocus />
            </EditText>

        </LinearLayout>

        <View style="@style/LayoutRowSeparator"/>

        <LinearLayout style="@style/LayoutRow">

            <com.faltenreich.diaguard.ui.view.TintImageView
                style="@style/LayoutRowImage"
                android:src="@drawable/ic_category_meal"
                app:tintColor="@color/gray_darker" />

            <TextView style="@style/LayoutRowLabel"
                android:text="@string/meal"/>

            <EditText style="@style/LayoutRowTextLarge"
                android:id="@+id/calculator_meal"/>

        </LinearLayout>

        <View style="@style/LayoutRowSeparator"/>

        <LinearLayout style="@style/LayoutRow">

            <com.faltenreich.diaguard.ui.view.TintImageView
                style="@style/LayoutRowImage"
                android:src="@drawable/ic_factor"
                app:tintColor="@color/gray_darker" />

            <TextView style="@style/LayoutRowLabel"
                android:text="@string/factor"/>

            <EditText style="@style/LayoutRowTextLarge"
                android:id="@+id/calculator_factor"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>